# langjamgamejam

./: .mise.toml  README.md  justfile  langjamgamejam.cabal
.github/workflows/: ci.yml
binary/: Main.hs
game/: Event.hs  Game.hs  Program.hs  Render.hs  State.hs  source.prolog
language/: AST.hs  Interpreter.hs  Parser.hs
source/: AST.hs  Interpreter.hs  Parser.hs  Propagator.hs
tests/: InterpreterSpec.hs  ParserSpec.hs  PropagatorSpec.hs
tests/failing/fully-ground-false-fact/: query.prolog
tests/failing/negation-fails/: query.prolog  source.prolog
tests/passing/cut-operator-test/: output.json  query.prolog  source.prolog
tests/passing/fully-ground-true-fact/: query.prolog  source.prolog
tests/passing/grandfather-rule/: output.json  query.prolog  source.prolog
tests/passing/multiple-matching-facts/: output.json  query.prolog  source.prolog
tests/passing/negation-in-rule/: query.prolog  source.prolog
tests/passing/negation-succeeds/: query.prolog  source.prolog
tests/passing/simple-fact-match/: source.prolog
tests/passing/single-step-grandfather-rule/: source.prolog
