cabal-version: 3.4
name: ljgj
version: 0.1.0.0
build-type: Simple

library language
  hs-source-dirs: language
  default-language: GHC2021
  ghc-options: -Wunused-packages -Werror -Wall
  exposed-modules:
    AST
    Parser
    Propagator
    Interpreter
  build-depends:
    aeson,
    base,
    containers,
    ghc-prim,
    logict,
    mtl,
    parsec,
    primitive,
    text

test-suite langjamgamejam-tests
  type: exitcode-stdio-1.0
  default-language: GHC2021
  ghc-options: -Wunused-packages -Werror -Wall
  hs-source-dirs: tests
  main-is: Driver.hs
  other-modules:
    InterpreterSpec
    ParserSpec
    PropagatorSpec
  build-depends:
    aeson,
    base,
    directory,
    filepath,
    ghc-prim,
    hspec,
    ljgj:language,
    logict,
    parsec,
    primitive,
    scientific,
    tasty,
    tasty-hspec,
    transformers
  build-tool-depends: tasty-discover:tasty-discover
