cabal-version: 3.4
name: ljgj
version: 0.1.0.0
build-type: Simple

library language
  hs-source-dirs: language
  default-language: GHC2021
  ghc-options: -Wunused-packages -Werror -Wall
  exposed-modules:
    AST
    Parser
    Propagator
    Interpreter
  build-depends:
    aeson,
    base,
    containers,
    ghc-prim,
    logict,
    mtl,
    parsec,
    primitive,
    text

library game
  hs-source-dirs: game
  default-language: GHC2021
  ghc-options: -Wunused-packages -Werror -Wall
  exposed-modules:
    Event
    Game
    Program
    Render
    State
  build-depends:
    base,
    brick,
    containers,
    filepath,
    lens,
    ljgj:language,
    mtl,
    parsec,
    text,
    vty

executable binary
  main-is: Main.hs
  hs-source-dirs: binary
  default-language: GHC2021
  ghc-options: -Wunused-packages -Werror -Wall -threaded
  build-depends:
    base,
    ljgj:game

test-suite tests
  type: exitcode-stdio-1.0
  default-language: GHC2021
  ghc-options: -Wunused-packages -Werror -Wall
  hs-source-dirs: tests
  main-is: Driver.hs
  other-modules:
    InterpreterSpec
    ParserSpec
    PropagatorSpec
  build-depends:
    aeson,
    base,
    directory,
    filepath,
    ghc-prim,
    hspec,
    ljgj:language,
    logict,
    parsec,
    primitive,
    tasty,
    tasty-hspec,
    transformers
  build-tool-depends: tasty-discover:tasty-discover
